...
      PopupMenuItem(
        value: PostOption.copyDetails,
        child: Text('Copy post details', style: AppTypography.body(colors)),
      ),
      PopupMenuItem(
        value: PostOption.hide,
        child: Text('Hide this post', style: AppTypography.body(colors)),
      ),
    ],
  );
}

final class _CupertinoPostOptionsMenu extends StatelessWidget {
...
